# web-look-rs

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/cli/: builder.rs  lookup.rs  mod.rs
