[package]
name = "web_look"
version = "0.1.0"
edition = "2021"
authors = ["Vinicius Leme Alves <vinicch.leme@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
trust-dns-resolver = "0.23.1"
